<resources>
    <string name="app_name">ArrowConnect</string>
    <string name="action_account">Accounts</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <!--Activities-->
    <string name="title_activity_account">Accounts</string>
    <string name="title_activity_about">About</string>
    <string name="activity_about_version">Arrow Connect Gateway Version</string>
    <string name="activity_about_version_sdk">SDK Version</string>
    <string name="activity_event_registration">Event Registration</string>
    <string name="activity_about_copyright">Copyright (C) 2017 Arrow Electronics, Inc</string>

    <!--Accounts list-->
    <string name="title_fragment_accounts_list">Accounts</string>
    <string name="title_fragment_accounts_active">Active</string>
    <string name="fragment_accounts_set_active">Set active</string>

    <!--New Account-->
    <string name="fragment_new_account_profile_name">Profile name</string>
    <string name="fragment_new_account_name">Name</string>
    <string name="fragment_new_account_email">Email</string>
    <string name="fragment_new_account_password">Password</string>
    <string name="fragment_new_account_code">Application Code</string>
    <string name="fragment_new_account_default_profile">My Profile</string>
    <string name="fragment_new_account_button_text">Register</string>
    <string name="fragment_new_account_title">Create an account</string>
    <string name="fragment_new_account_registering">Registering account…</string>
    <string name="fragment_new_account_logging">Logging on to Arrow Connect …</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_gps_switch_label">Location Services</string>
    <string name="settings_sending_rate_label">Sending rate (s)</string>
    <string name="settings_heartbeat_interval_label">Heartbeat interval (s)</string>
    <string name="settings_heart_rate_label">MS Band heart rate consent</string>
    <string name="settings_heart_rate_accepted">Heart rate is already accepted</string>
    <string name="settings_failed_to_connect">Failed to connect</string>
    <string name="settings_demo_mode">Production</string>
    <string name="settings_dev_mode">Development</string>
    <string name="settings_base_title">Base settings</string>
    <string name="settings_dev_config_title">Device configuration</string>

    <string name="simba_list_title">Choose Device</string>


    <string name="drawer_menu_open">Open navigation drawer</string>
    <string name="drawer_menu_close">Close navigation drawer</string>

    <string name="cards_ms_band_title">MS Band</string>
    <string name="cards_sensor_puck_title">SiLabs Sensor Puck</string>
    <string name="cards_android_internal_title">Android</string>
    <string name="cards_senseability_kit_title">SenseAbility 2</string>
    <string name="senseability_details_title">SenseAbility 2</string>
    <string name="thunderboard_details_title">Thunderboard</string>
    <string name="cards_sensor_tile_title">Sensor Tile</string>
    <string name="cards_simba_pro_title">SIMBA-PRO</string>
    <string name="cards_device_type">device type</string>

    <string name="ms_band_config_title">MS Band configuration</string>
    <string name="android_internal_config_title">Android sensors configuration</string>
    <string name="thunder_board_config_title">Thunder Board sensors configuration</string>
    <string name="sensor_tile_config_title">Sensor Tile configuration</string>
    <string name="simba_pro_config_title">SenseBLE configuration</string>

    <string name="fragment_actions">Actions</string>
    <string name="fragment_new_action">New Action</string>
    <string name="fragment_historical_actions">Events</string>
    <string name="fragment_new_action_delete">Delete</string>

    <string name="device_list_card_removed">card is removed</string>
    <string name="device_list_undo">UNDO</string>

    <string name="telemetry_param_humidity">Humidity</string>
    <string name="telemetry_param_light">Light</string>

    <string name="sensor_tile_details_temp">Ambient Temp</string>

    <string name="sensor_tile_details_surf_temp">Surface Temp</string>
    <string name="details_mic_lvl">Mic Level</string>
    <string name="sensor_tile_details_switch">Switch</string>

    <string name="ms_band_details_skin_temp">skin\ntemp</string>
    <string name="ms_band_details_uv">uv</string>
    <string name="ms_band_details_distance">Total Distance</string>

    <string name="sensor_puck_details_uv">UV</string>

    <string name="device_details_accelerometer">Accelerometer</string>
    <string name="device_details_gyroscope">Gyroscope</string>
    <string name="device_details_magnetometer">Magnetometer</string>
    <string name="device_details_temperature">Temperature</string>
    <string name="device_details_heart_rate">Heart Rate</string>
    <string name="device_details_pressure">Pressure</string>
    <string name="device_details_total_steps">Total Steps</string>
    <string name="device_details_magnet">Magnet</string>
    <string name="device_details_airflow">Airflow</string>
    <string name="device_details_orientation">Orientation</string>

    <string name="device_details_degree_sign">\u00B0</string>
    <string name="device_details_meters_per_square_second">ms\u00B2</string>
    <string name="device_details_steps">steps</string>
    <string name="device_details_foots">ft</string>
    <string name="device_details_lx">lx</string>
    <string name="device_details_percents">%</string>
    <string name="device_details_gyro">rad/s</string>
    <string name="device_details_magnet_unit">\u03BCT</string>
    <string name="device_details_pressure_unit">\hPa</string>

    <!--MS Band config labels-->
    <string name="ms_band_skin_temperature_sensor">Skin temperature</string>
    <string name="ms_band_accelerometer_sensor">Accelerometer</string>
    <string name="ms_band_gyroscope_sensor">Gyroscope</string>
    <string name="ms_band_uv_sensor">UV sensor</string>
    <string name="ms_band_pedometer_sensor">Pedometer</string>
    <string name="ms_band_distance_sensor">Distance</string>
    <string name="ms_band_heart_rate_sensor">Heart rate</string>

    <string name="sensor_tile_movement_sensor">Movement sensor</string>
    <string name="config_temperature_sensor">Temperatures sensor</string>
    <string name="config_light_sensor">Light sensor</string>
    <string name="config_humidity_sensor">Humidity sensor</string>

    <string name="config_sensors_title">Sensors</string>

    <!--Sensor tile config labels-->
    <string name="sensor_tile_environment_sensor">Environment sensor</string>
    <string name="sensor_tile_mic_level_sensor">Mic level sensor</string>
    <string name="sensor_tile_switch_sensor">Switch sensor</string>

    <!--Simba pro config labels-->
    <string name="simba_pro_light_sensor">Light sensor</string>

    <string name="device_pressure_sensor">Pressure</string>
    <string name="device_orientation_sensor">Orientation sensor</string>

    <string name="action_description">Description</string>
    <string name="action_criteria">Criteria</string>
    <string name="action_expiration">Expiration</string>
    <string name="action_email">Email</string>
    <string name="action_message">Message</string>
    <string name="action_phone">Phone</string>
    <string name="action_sip_address">Sip Address</string>
    <string name="action_url">URL</string>
    <string name="action_severity">Severity</string>
    <string name="action_location">Location</string>

    <string name="action_type_email">Send Email</string>
    <string name="action_type_skype_call">Initiate Skype Call</string>
    <string name="action_type_skype_meeting">Initiate Skype Meeting</string>
    <string name="action_type_insight_alarm">Arrow Insight Alarm</string>
    <string name="action_type_url">Post Back URL</string>
    <string name="action_history">Action History</string>

    <string name="historical_event_status">"Status: "</string>

    <!--Telemetries fragment-->
    <string name="telemetries_fragment_title">Telemetries</string>
    <string name="dashboard_fragment_title">Dashboard</string>
    <string name="telemetry_label">telemetry</string>
    <string name="notifications_label">notifications</string>
    <string name="request_error">Request failed</string>
    <string name="telemetry_label_upper">Telemetry</string>
    <string name="telemetry_error_not_selected">Select telemetry before</string>
    <string name="telemetry_select">Select telemetry</string>

    <!--Simba OTA-->
    <string name="simba_ota_title">SenseBLE OTA</string>
    <string name="simba_ota_firmwares">Available Firmware</string>
    <string name="simba_ota_update">Update Now!</string>
    <string name="simba_ota_updating">Updating!</string>

    <string name="error_connection_lost">Connection lost</string>
    <string name="error_ble_not_available">Bluetooth is not available</string>
    <string name="error_ble_not_enabled">Bluetooth is not enabled</string>
    <string name="error_location_not_enabled">Location service is not enabled</string>
    <string name="error_common">Common error</string>
    <string name="add_simba_confirmation">Are you sure you want to add</string>
    <string name="add_simba_confirmation_title">Confirm</string>

    <!--Event labels-->
    <string name="are_you_on_event">Are you attending an event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="choose_event">Choose Event</string>
    <string name="already_have_verification_code">Already have your verification code?</string>
    <string name="already_have_an_account">You already have an account, please sign in using your existing account.</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="miramonti">Miramonti</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-type Password</string>
    <string name="application_code">Application Code</string>
    <string name="invalid_verify_code_label">You have entered an invalid code. Verify your code and try again.</string>
    <string name="resend_code_label">Can\'t find your code? We can resend it to you.</string>
    <string name="resend_code">Resend Code</string>
    <string name="sign_in">Sign In</string>
    <string name="fragment_verification_process">Verifying…</string>
    <string name="fragment_resending_process">Resending…</string>
    <string name="existing_account_msg">You already have an account, please sign in using your existing account</string>
    <string name="nothing_to_select">Nothing to select…</string>
    <string name="please_type_your_verification_code">Please type your verification code</string>
    <string name="verification_code_has_been_sent">Verification code has been sent</string>
    <string name="development">Development</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>

</resources>
