<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_black"
                android:orientation="vertical">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/verification_email_field"
        android:layout_alignStart="@+id/verification_email_field"
        android:layout_below="@+id/verify_code_button"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/resend_code_label"
        android:textAlignment="center"
        android:textColor="@color/main_white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/verification_email_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/verification_code_field"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="15dp"
        android:background="@drawable/event_registration_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/main_white"
        android:textColorHint="@android:color/darker_gray"/>

    <Button
        android:id="@+id/resend_code_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_red_button"
        android:text="@string/resend_code"
        android:textColor="@color/main_white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_error_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif"
        android:text="@string/verification"
        android:textColor="@color/main_white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/verification_code_field"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/event_registration_edit_text"
        android:ems="10"
        android:hint="@string/verification_code"
        android:inputType="textPersonName"
        android:textColor="@color/main_white"
        android:textColorHint="@android:color/darker_gray"/>

    <Button
        android:id="@+id/verify_code_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/verify_error_label"
        android:layout_below="@+id/verification_code_field"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_round_button"
        android:text="@string/verify"
        android:textColor="@color/main_white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/verify_error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/verification_code_field"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/resend_code_button"
        android:layout_marginTop="20dp"
        android:text="@string/invalid_verify_code_label"
        android:textColor="@color/main_white"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/verify_error_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/verification_code_field"
        android:layout_alignTop="@+id/verify_error_label"
        app:srcCompat="@drawable/red_alarm_point"/>
</RelativeLayout>